<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context="com.guoyonghui.calculator.MainActivity">

    <TextView
        android:id="@+id/calculate_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_screen"
        android:gravity="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="@dimen/screen_text_size"
        />

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_backspace"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/action_backspace"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/backspace_text_size"/>


        <Button
            android:id="@+id/bt_exponent"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_exponent"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/bt_reset"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/action_reset"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/bt_brackets"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operator_brackets"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

    </LinearLayout>

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_seven"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_seven"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_eight"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_eight"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_nine"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_nine"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_add"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operator_add"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

    </LinearLayout>

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_four"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_four"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_five"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_five"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_six"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_six"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_subtract"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operator_subtract"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

    </LinearLayout>

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_one"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_one"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_two"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_two"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_three"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_three"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_multiply"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operator_multiply"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

    </LinearLayout>

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_point"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_point"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_zero"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operand_zero"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_calculate"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/action_calculate"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/bt_divide"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/operator_divide"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/button_text_size"
            />

    </LinearLayout>

</LinearLayout>
